@@ -1,3 +1,7 @@
+2011-07-25  Corinna Vinschen  <corinna@vinschen.de>
+
+	* rebase.c (load_image_info): Handle short reads.
+
 2011-07-23  Corinna Vinschen  <corinna@vinschen.de>
 
 	* rebase.c (parse_args): Check that base address doesn't
